--- a/Post/CutplaneDialog.ui
+++ b/Post/CutplaneDialog.ui
@@ -41,7 +41,7 @@
     <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
    </property>
   </widget>
-  <widget class="QLabel" name="label_2">
+  <widget class="QLabel" name="lab_ContourType">
    <property name="geometry">
     <rect>
      <x>20</x>
@@ -200,7 +200,7 @@
     </rect>
    </property>
   </widget>
-  <widget class="QWidget" name="" native="true">
+  <widget class="QWidget" name="widget" native="true">
    <property name="geometry">
     <rect>
      <x>9</x>
@@ -329,6 +329,34 @@
      </widget>
     </item>
    </layout>
+  </widget>
+  <widget class="QLabel" name="lab_MapVariable">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>230</y>
+     <width>151</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>11</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Mapping Variable :</string>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="Combo_SekectMapVariable">
+   <property name="geometry">
+    <rect>
+     <x>180</x>
+     <y>230</y>
+     <width>171</width>
+     <height>23</height>
+    </rect>
+   </property>
   </widget>
  </widget>
  <resources/>
