--- a/Post/MainWindow.ui
+++ b/Post/MainWindow.ui
@@ -7,8 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>1666</width>
-    <height>890</height>
+    <height>1000</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="font">
    <font>
@@ -57,7 +63,7 @@
             <x>0</x>
             <y>0</y>
             <width>238</width>
-            <height>772</height>
+            <height>882</height>
            </rect>
           </property>
           <widget class="QLabel" name="label_5">
@@ -1038,6 +1044,82 @@
              </widget>
             </item>
            </layout>
+          </widget>
+          <widget class="QLabel" name="label_3">
+           <property name="geometry">
+            <rect>
+             <x>10</x>
+             <y>680</y>
+             <width>121</width>
+             <height>16</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string>View Control</string>
+           </property>
+          </widget>
+          <widget class="QCheckBox" name="Check_3Dview">
+           <property name="geometry">
+            <rect>
+             <x>10</x>
+             <y>710</y>
+             <width>85</width>
+             <height>21</height>
+            </rect>
+           </property>
+           <property name="font">
+            <font>
+             <pointsize>10</pointsize>
+             <weight>75</weight>
+             <bold>true</bold>
+            </font>
+           </property>
+           <property name="text">
+            <string>3D View</string>
+           </property>
+           <property name="checked">
+            <bool>true</bool>
+           </property>
+          </widget>
+          <widget class="QCheckBox" name="Check_Meri">
+           <property name="geometry">
+            <rect>
+             <x>130</x>
+             <y>710</y>
+             <width>101</width>
+             <height>21</height>
+            </rect>
+           </property>
+           <property name="font">
+            <font>
+             <pointsize>10</pointsize>
+             <weight>75</weight>
+             <bold>true</bold>
+            </font>
+           </property>
+           <property name="text">
+            <string>Meridional</string>
+           </property>
+          </widget>
+          <widget class="QCheckBox" name="Check_DoubleView">
+           <property name="geometry">
+            <rect>
+             <x>10</x>
+             <y>740</y>
+             <width>121</width>
+             <height>21</height>
+            </rect>
+           </property>
+           <property name="font">
+            <font>
+             <pointsize>10</pointsize>
+             <weight>75</weight>
+             <bold>true</bold>
+            </font>
+           </property>
+           <property name="text">
+            <string>Double View</string>
+           </property>
           </widget>
          </widget>
         </widget>
